# DEF-roboticattack

./: .env.serve  .gitignore  AUTOPILOT_REPORT.md  CLAUDE.md  DOWNLOAD_MANIFEST.md  Dockerfile.serve  Makefile  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: MAP.md
benchmarks/: README.md  benchmark_patch_guard.py
benchmarks/results/: patch_guard_mlx.json
configs/: debug.toml  libero.toml  paper.toml  vla_attack.toml
docs/: CUDA_SERVER_HANDOFF.md
kernels/: README.md
kernels/cuda/: fused_patch_blend.cu  robotic_attack_ops.cu  setup.py
kernels/mlx/: fused_patch_blend.metal
kernels/triton/: fused_patch_blend.py
scripts/: cuda_benchmark.sh  cuda_handoff_check.sh  cuda_server_setup.sh  cuda_smoke.sh
src/def_roboticattack/: __init__.py  cli.py  config.py  device.py  evaluate.py  export.py  serve.py  train.py
src/def_roboticattack/attacks/: __init__.py  cuda_augment.py  patch_gen.py
src/def_roboticattack/data/: __init__.py  libero_defense.py  rlds_adapter.py  synthetic.py  vla_attack_dataset.py
tasks/: README.md  TASK-001-source-intake-and-audit.md  TASK-002-paper-validation.md  TASK-003-prd-authoring.md  TASK-004-dual-backend-abstraction.md  TASK-005-defense-runtime-baseline.md  TASK-006-kernel-track-scaffold.md  TASK-007-benchmark-harness-baseline.md  TASK-008-openvla-integration-layer.md  TASK-009-quantized-defense-path.md  TASK-010-cuda-mlx-parity-validation.md  TASK-011-jetson-edge-hardening.md  TASK-012-security-evaluation-report.md
tests/: test_defense.py
(+10 files in other folders)
