[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "def-roboticattack"
version = "0.1.0"
description = "ANIMA defense scaffold for adversarial robustness in VLA robotic policies"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AIFLOWLABS ANIMA" }]
dependencies = [
  "numpy>=1.26",
  "typer>=0.12.3",
  "pydantic>=2.8",
]

[project.optional-dependencies]
cuda = ["torch>=2.2", "safetensors>=0.4", "onnx>=1.15"]
mlx = ["mlx>=0.20"]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.11",
]
export = ["safetensors>=0.4", "onnx>=1.15", "onnxruntime-gpu>=1.17"]

[project.scripts]
def-roboticattack = "def_roboticattack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/def_roboticattack"]

[tool.ruff]
line-length = 100
target-version = "py311"

